<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/buttons_container">

        <TextView
            android:id="@+id/show_result"
            android:maxLength="17"
            android:maxLines="1"
            android:gravity="center"
            android:layout_gravity="end|bottom"
            android:textColor="@color/white"
            android:textSize="80sp"
            android:paddingHorizontal="32dp"
            android:autoSizeTextType="uniform"
            android:text="0"
            android:layout_width="wrap_content"
            android:layout_height="120dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/history_btn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="Send result"
            android:onClick="publishHistory"/>

    </FrameLayout>


    <LinearLayout
        android:id="@+id/buttons_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4"
            android:padding="8dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_clear"
                android:text="@string/btn_clear"
                android:onClick="onNumberClick"
                style="@style/BaseButton"
                tools:ignore="OnClick" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/plus_minus"
                style="@style/BaseButton"
                android:layout_marginHorizontal="8dp"
                android:text="@string/btn_plus_minus" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/percentage"
                style="@style/BaseButton"
                android:layout_marginEnd="8dp"
                android:text="@string/btn_percentage" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/divide"
                style="@style/BaseButton.Orange"
                android:text="@string/btn_divide"
                android:onClick="expressionPlus"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4"
            android:padding="8dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_seven"
                android:text="@string/btn_seven"
                style="@style/BaseButton.Dark"
                android:onClick="onNumberClick"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_eight"
                style="@style/BaseButton.Dark"
                android:layout_marginHorizontal="8dp"
                android:text="@string/btn_eight"
                android:onClick="onNumberClick"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_nine"
                style="@style/BaseButton.Dark"
                android:layout_marginEnd="8dp"
                android:text="@string/btn_nine"
                android:onClick="onNumberClick"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_multiply"
                style="@style/BaseButton.Orange"
                android:text="@string/btn_multiply"
                android:onClick="expressionPlus"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4"
            android:padding="8dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_four"
                android:text="@string/btn_four"
                style="@style/BaseButton.Dark"
                android:onClick="onNumberClick"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_five"
                style="@style/BaseButton.Dark"
                android:layout_marginHorizontal="8dp"
                android:text="@string/btn_five"
                android:onClick="onNumberClick"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_six"
                style="@style/BaseButton.Dark"
                android:layout_marginEnd="8dp"
                android:text="@string/btn_six"
                android:onClick="onNumberClick"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_minus"
                style="@style/BaseButton.Orange"
                android:text="@string/btn_minus"
                android:onClick="expressionPlus"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4"
            android:padding="8dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_one"
                android:text="@string/btn_one"
                style="@style/BaseButton.Dark"
                android:onClick="onNumberClick"
                tools:ignore="UsingOnClickInXml" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_two"
                style="@style/BaseButton.Dark"
                android:layout_marginHorizontal="8dp"
                android:text="@string/btn_two"
                android:onClick="onNumberClick"
                tools:ignore="UsingOnClickInXml" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_three"
                style="@style/BaseButton.Dark"
                android:layout_marginEnd="8dp"
                android:text="@string/btn_three"
                android:onClick="onNumberClick"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_plus"
                style="@style/BaseButton.Orange"
                android:text="@string/btn_plus"
                android:onClick="expressionPlus"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4"
            android:padding="8dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_zero"
                android:text="@string/btn_zero"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:textAlignment="textStart"
                android:paddingStart="35dp"
                android:width="160dp"
                style="@style/BaseButton.Dark"
                android:onClick="onNumberClick"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_dot"
                style="@style/BaseButton.Dark"
                android:layout_width="0dp"
                android:layout_marginHorizontal="8dp"
                android:text="@string/btn_dot" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_equal"
                style="@style/BaseButton.Orange"
                android:layout_width="0dp"
                android:text="@string/btn_equal"
                android:onClick="expressionPlus"
                tools:ignore="UsingOnClickInXml" />

        </LinearLayout>



    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>